# protest

./: .gitignore  Makefile.am  README.adoc  configure.ac  protest.cpp  protest_test.cpp
docs/: Doxyfile.in
include/protest/: case_gen.hpp  condition.hpp  generic_test.hpp  loligger_sgr_macro.h  protest_common.hpp  simple_test.hpp  test_base.hpp
m4/: ax_cxx_compile_stdcxx_14.m4
